welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: ')' expected but ';' found.
      (gauche();
               ^SnakeBuggle:10: error: illegal start of statement
       gauche();)
                ^SnakeBuggle:13: error: ')' expected but ';' found.
      (droite();
               ^SnakeBuggle:15: error: illegal start of statement
       droite();)
                ^